Fix: [US17] Influencers Referral Program.